fix the angular unit test case

--- a/EG.Shopping.Web/src/app/standalone-components/pages/cart-details/cart-details.component.html
+++ b/EG.Shopping.Web/src/app/standalone-components/pages/cart-details/cart-details.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid py-5" style="padding-top: 150px !important;">
     <div class="container py-5">
-        @if (cart().cartId && cart().items.length > 0) {
+        @if (cart() && cart().cartId && cart().items.length > 0) {
         <div class="table-responsive">
             <table class="table">
                 <thead>
